--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "groq-sdk": "^0.26.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
+    "node-appwrite": "17.0.0",
+    "nodemailer": "^7.0.5",
     "openai": "^5.8.2",
     "stripe": "^18.2.1"
   },
@@ -33,6 +35,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^6.4.17",
     "typescript": "^5.8.3"
   }
 }
